--- a/.vim/README
+++ b/.vim/README
@@ -1,48 +1,69 @@
-The checksyntax plugin runs an external syntax checker for the current buffer 
-whenever the buffer is saved (by calling the |:CheckSyntax| command). Syntax 
-errors are managed as location or quickfix lists. If any syntax error occurs, 
-the |location-list| is opened (users can redefine |CheckSyntaxFail()| to change 
-this behaviour). You can use any |location-list| related command to navigate 
-the list of syntax errors.
+Vim scripts I have written or modified.
+These are under either the original copyright or the public domain.
 
-If vimscript #2584 is installed, lines containing syntax errors will be marked 
-with signs.
+Files:
+    color/jessica.vim   - Custom color format. Close to old Vim colors.
 
-By default, |:CheckSyntax| is mapped to <F5> (if not mapped already), 
-and automatically executed when saving the buffer. The |:CheckSyntax| 
-command takes one optional argument: the mode (default: &filetype).
-<C-F5> will run all syntax checkers for a given filetype if multiple 
-alternatives are defined and installed on your computer.
+    compiler/nagelfar.vim
+**** This now lives at https://github.com/JessicaKMcIntosh/Nagelfar-Vim ****
+                        - Use Nagelfar as a compiler command for checking Tcl
+                          syntax.  Works best if g:nagelfar_file is set to the
+                          full path of the nagelfar.tcl file. Works correctly
+                          in Windows if tclsh is in the path.
 
-As the plugin doesn't provide syntax checks by its own. This is done by 
-an external syntax checker that has to be installed on your computer.
+    compiler/perlcritic.vim
+                        - Compiler plugin for checking Perl code with perlcritic.
+                          To use excute ':compiler perlcritic' them use ':make'
+                          or ':lmake'. See ':help make' in Vim for details.
 
-For the following filetypes, syntax checkers are pre-defined:
+    indent/awk.vim      - AWK indention file adapted from the Perl indention
+                          file. The default AWK indention file was overly
+                          complex and didn't work correctly.
 
-    c, cpp :: Check syntax via splint
-    html :: Check syntax via tidy
-    javascript :: Check syntax via jslint, jshint, jsl, or gjslint
-    java :: Check syntax via jlint or javaCheckstyle
-    lua :: Parse file (luac -p)
-    php  :: Check syntax (php -l)
-    python :: Check file with pyflakes or pylint
-    r :: Check syntax & style with lint::lint or svTools::lint
-    ruby :: Check syntax (ruby -c)
-    tex, latex :: Parse file (chktex -q -v0)
-    xml, docbk :: Check syntax via xmllint
+    syntax/perl.vim     - Changes to the default perl.vim.
 
-See the autoload/checksyntax/defs/ directory for a complete list of 
-supported syntax checkers. See |g:checksyntax| also for how to define 
-your own syntax checkers.
+                          Added more operators.
+                          Made whitespace at the end of a line an error.
 
-This plugin was originally based on Klaus Horsten's php_console 
-(vimscript #779) and it is the successor of php_check_syntax.vim 
-(vimscript #1272).
+    syntax/screen.vim   - The start of a more complete screen syntax file.
 
+    syntax/sh.vim       - The standard sh.vim with embedded AWK syntax.
 
------------------------------------------------------------------------
+    syntax/sql.vim      - More complete SQL syntax. Catches errors and
+                          only highlights types inside create table
+                          statements.
 
-Status:  Works for me (there may be some minor quirks)
-Install: See http://github.com/tomtom/vimtlib/blob/master/INSTALL.TXT
-See http://github.com/tomtom for related plugins.
+    syntax/tcl.vim      - Heavily reworked Tcl syntax file.
+                          A work in progress.
+                          See the Note at the top of the file regarding the
+                          color of procedure names.
 
+    plugin/emacskeys.vim
+                        - Emacs like keymappings for insert mode.
+                          This is so I can use familiar Bash Emacs mappings in Vim.
+
+    plugin/pulse.vim    - Pulse the cursor line when repeating a search with
+                          "n" or "N". See the file for details.
+
+    plugin/securemodelines.vim
+                        - Modification to the securemodelines.vim plugin to
+                          allow more marker settings. The original does not
+                          allow setting foldmarker or foldlevel.
+
+    plugin/tcl_tooltips.vim
+**** This now lives at https://github.com/JessicaKMcIntosh/TagmaTips ****
+                        - Provides Tool Tips for Tcl code. Contains lists for
+                          Tcl commands and variables. Will also scan the
+                          current buffer for procedures adding the definition
+                          and description comments. I am going to make this a
+                          generic plugin with support for other languages.
+
+    plugin/tcldocs.vim  - Lookup TCL documentation.
+                          Requires the tcldocs directory.
+                          Typing '\td' will lookup the word under the cursor or
+                          highlighted word. Typing '\TD' will ask for a word to
+                          lookup. If the word can not be found 'tcl' is loaded.
+
+    tcldocs/            - Doc files for plugin/tcldocs.vim.
+                          To generate the doc files for your Tcl environment see
+                          the gen.sh script in the directory.
